QA-3940: implemented tests for additional languages